style.css
html {
    background-color: #000000;
    color: rgb(170,170,170);
    position: absolute;
    font-family: 'PxPlus IBM VGA 8x16';
    line-height: 16px;
    right: 50%;
    top: 50%;
    transform: translate(50%, -50%);
    width: 75%;
    text-align: center;
    height: 100%;
}
@font-face {
    font-family: 'PxPlus IBM VGA 8x16';
    src: url("PxPlus_IBM_VGA_8x16.ttf");
    font-smooth: never;
    margin: 2px;
}
@font-face {
    font-family: 'PxPlus IBM EGA 8x8';
    src: url("PxPlus_IBM_EGA_8x8.ttf");
    font-smooth: never;
    margin: 2px;
    font-size: 8px;
}
b {
    color: #ffffff;
    font-weight: normal;
}
::selection {
    background-color: rgb(0,0,170);
    color: rgb(255,255,85);
}
label {
    width: 100%;
}
a {
    color: rgb(85,255,255);
    text-decoration: none;
}
a.disabled {
    color: rgb(170,0,0);
    pointer-events:painted;
}
a.disabled:hover {
    color: rgb(255,85,85);
}
a:visited {
    color: rgb(0,170,170);
}
a:hover {
    color: rgb(85,255,255);
}
a:active {
    color: rgb(85,255,85);
}
a:invalid {
    pointer-events: none;
    color: rgb(170,0,0);
}
button {
    background-color: #000000;
    border-style: none;
    color: rgb(0,170,0);
    font-family: 'PxPlus IBM VGA 8x16';
    font-size: 16px;
    padding: 0px;
    margin: 0px;
}
button:disabled {
    pointer-events: none;
    color: rgb(170,0,0);
}
button:hover {
    color: rgb(85,255,85);
    cursor: pointer;
}
hr {
    border-style:none;
    height: 1px;
    background-color: #ffffff;
    margin-left: -4px;
    margin-right: -4px;
}
sup {
    font-size: 8px;
    font-family: 'PxPlus IBM EGA 8x8';
}
sub {
    font-size: 8px;
    font-family: 'PxPlus IBM EGA 8x8';
}
.box {
    border-style: double;
    border-width: 3px;
    border-color: #ffffff;
    display: inline-block;
    padding: 4px;
    margin-top: 4px;
}
.popup {
    border-style: double;
    border-width: 3px;
    border-color: #ffffff;
    background-color: #000000;
    display: inline-block;
    padding: 4px;
    margin-top: 4px;
    position: absolute;
    right: 50%;
    top: 50%;
    transform: translate(50%, -50%);
}
.hide {
    position:fixed;
    padding:0;
    margin:0;

    top:0;
    left:0;

    width: 100%;
    height: 100%;
    background-color: #000000;
}
.bottom {
    display: none;
	left: 5px;
	position: fixed;
	bottom: 5px;
	width: 100%;
    height: 100%;
}
.boxheader {
    position: relative;
    top: -14px;
    text-align: left;
    background-color: #000000;
    display: inline-block;
}
.ascii {
    white-space: pre;
}
input[type="text"] {
    border-style: solid;
    border-width: 1px;
    border-color: #ffffff;
    background-color: #000000;
    color: #00ffff;
    font-family: 'PxPlus IBM VGA 8x16';
    font-size: 16px;
    margin: 4px;
}
input:focus {
    outline: none;
}

